# Ticket-Validator

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: cli.rs  crypto.rs  db.rs  errors.rs  event.rs  lib.rs  main.rs  price.rs  requirements.txt  ticket.rs
